--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -91,6 +91,11 @@ nav, .sidenav{
    box-shadow: 0 1px 15px rgba(0,0,0,.04),0 1px 6px rgba(0,0,0,.04);
 }
 
+.text-justify{
+   text-align: justify;
+   text-justify: inter-word;
+}
+
 .header-content{
    background-image: linear-gradient(to right, rgba(0, 0, 0, .9) 150px, rgba(0, 0, 0, 0) 100%);
    padding: 8rem 10%;
